--- a/public/index.html
+++ b/public/index.html
@@ -692,7 +692,7 @@
 							item.status = "ERR";
 							item.duration = Date.now() - startTime;
 							item.response = err.message;
-							console.log(err);
+							 (err);
 						});
 
 				},
